--- a/src/WildFire_TimeSeries/time_series.ipynb
+++ b/src/WildFire_TimeSeries/time_series.ipynb
@@ -4387,7 +4387,17 @@
    "source": [
     "## Conclusão\n",
     "\n",
-    "Decidimos utilizar o modelo de Regressão com Redes Neurais, pois dentre todos os modelos que testamos, foi um dos modelos que apresentou resultados plaúsiveis. Onde o objetivo seria retornar um valor de **risco de fogo percentual** que poderia ocorrer em um **bioma** em determinado **mês** do ano, baseado também na quantidade de **dias sem chuva** e **níveis de precipitação** atuais."
+    "Decidimos utilizar o modelo de **Regressão com Redes Neurais**, pois dentre todos os modelos que testamos, foi um dos modelos que apresentou resultados plaúsiveis. Onde o objetivo seria retornar um valor de **risco de fogo percentual** que poderia ocorrer em um **bioma** em determinado **mês** do ano, baseado também na quantidade de **dias sem chuva** e **níveis de precipitação** atuais.\n",
+    "\n",
+    "Esta solução poderia ser disponibilizada em um endpoint de uma API, onde no corpo da requisição poderia ser enviado todas essas características mencionadas anteriormente para o modelo realizar a previsão. O resultado retornado pelo modelo seria um valor de risco de fogo percentual, calculado com base em uma tabela de **referência estatística** (*referencia_estatistica_bioma_mes.csv*). Esta tabela armazena os valores de desvio padrão e média das ocorrências de focos de incêndio agrupados por bioma e mês do ano. Após a previsão do modelo, é calculado este valor baseado nesta tabela.\n",
+    "\n",
+    "Exemplo do trecho do código que realiza o cálculo:\n",
+    "\n",
+    "```py\n",
+    "    risco = (y_pred - referencia_estatistica['mean']) / referencia_estatistica['std']\n",
+    "    \n",
+    "    risco_percentual = min(max((risco * 10) + 50, 1), 100)\n",
+    "```"
    ]
   }
  ],
