--- a/src/WildFire_TimeSeries/time_series.ipynb
+++ b/src/WildFire_TimeSeries/time_series.ipynb
@@ -4403,7 +4403,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -4417,7 +4417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
